<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:background="@drawable/ic_background">

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="150dp"
        android:prompt="@string/spinner1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginLeft="100dp"
        android:text="@string/current"
        android:textStyle="bold"
        android:textColor="#FFBB33"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/spinner1"
        android:layout_marginTop="100dp"
        android:text="@string/destination" 
        android:textStyle="bold"
        android:textColor="#FFBB33"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/spinner1"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:prompt="@string/spinner2" 
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
    	android:layout_marginRight="20dp"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:text="@string/button" 
        android:background="@drawable/btn_default"/>

</RelativeLayout>
